[package]
name = "rust-memleak-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-memleak-common = { path = "../rust-memleak-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }
xtask = { path = "../xtask" }

[[bin]]
name = "rust-memleak"
path = "src/main.rs"
